--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,10 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="flutterinstagramclone"
         android:icon="@mipmap/ic_launcher">
+        <!-- <activity
+        android:name="com.yalantis.ucrop.UCropActivity"
+        android:screenOrientation="portrait"
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>   -->
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
